--- a/.github/workflows/pypi-package.yml
+++ b/.github/workflows/pypi-package.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Build wheel
       run: python setup.py sdist
     - name: Publish packge to Test PyPI
-      uses: pypa/gh-action-pypi-publish@published
+      uses: pypa/gh-action-pypi-publish@master
       with:
         user: __token__
         password: ${{ secrets.TEST_PYPI }}
